# docs/swagger.yaml
@@ -192,39 +192,9 @@ definitions:
       latestVersion:
         $ref: '#/definitions/dto.AppVersionResponse'
     type: object
-  dto.ElectricityTaskOption:
-    properties:
-      building:
-        type: string
-      campus:
-        type: string
-      notifyTime:
-        type: string
-      room:
-        type: string
-    required:
-    - building
-    - campus
-    - notifyTime
-    - room
-    type: object
   dto.ErrorResponse:
     properties:
       error:
-        type: string
-    type: object
-  dto.LoginRequest:
-    properties:
-      token:
-        type: string
-    required:
-    - token
-    type: object
-  dto.LoginResponse:
-    properties:
-      profile:
-        $ref: '#/definitions/sso.Profile'
-      token:
         type: string
     type: object
   dto.SemesterCalendarDetailResponse:
@@ -260,17 +230,6 @@ definitions:
         type: string
       title:
         type: string
-    type: object
-  dto.SyncElectricityTaskRequest:
-    properties:
-      deviceToken:
-        type: string
-      tasks:
-        items:
-          $ref: '#/definitions/dto.ElectricityTaskOption'
-        type: array
-    required:
-    - deviceToken
     type: object
   model.CalendarNote:
     properties:
@@ -311,39 +270,6 @@ definitions:
       category:
         type: string
       name:
-        type: string
-    type: object
-  sso.Profile:
-    properties:
-      avatar:
-        description: 最终头像链接
-        type: string
-      categoryName:
-        description: 学生类别
-        type: string
-      certCode:
-        description: 身份证号（打码）
-        type: string
-      defaultUserAvatar:
-        description: 默认头像链接
-        type: string
-      deptName:
-        description: 学院名称
-        type: string
-      email:
-        description: 邮箱
-        type: string
-      headImageIcon:
-        description: 用户设置的头像链接
-        type: string
-      phone:
-        description: 手机号（打码）
-        type: string
-      userAccount:
-        description: 学号
-        type: string
-      userName:
-        description: 姓名
         type: string
     type: object
 host: localhost:8080
@@ -934,40 +860,6 @@ paths:
       summary: 更新校历
       tags:
       - admin
-  /auth/login:
-    post:
-      consumes:
-      - application/json
-      description: 使用Token进行登录，如果用户不存在则自动注册。登录成功后返回含有JWT的凭证信息。
-      parameters:
-      - description: 登录请求，需包含获取的token
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/dto.LoginRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/dto.LoginResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-      summary: 用户登录
-      tags:
-      - auth
   /config/announcements:
     get:
       description: 获取当前生效的公告列表，按创建时间倒序排列
@@ -1117,34 +1009,4 @@ paths:
       summary: 获取校历详情
       tags:
       - config
-  /task/electricity:
-    post:
-      consumes:
-      - application/json
-      description: 同步电费定时推送任务
-      parameters:
-      - description: 任务请求内容
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/dto.SyncElectricityTaskRequest'
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: 成功，无返回内容
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-      security:
-      - BearerAuth: []
-      summary: 同步电费推送任务
-      tags:
-      - task
 swagger: "2.0"
